@@ -44,7 +44,7 @@ start() {
 	# enable forward for wan
 	echo 1 > "/proc/sys/net/ipv4/conf/$wan_if/forwarding"
 	# reinit switch fix 2.1 driver issue
-	setLanWan
+	/etc/scripts/config-switch.sh
     fi
 
     if [ "$wanmode" = "STATIC" ] || [ "$opmode" = "0" ]; then
